--- a/documentation/.docusaurus/docusaurus-plugin-content-docs/default/category-docs-tutorialsidebar-category-configuration-management-78c.json
+++ b/documentation/.docusaurus/docusaurus-plugin-content-docs/default/category-docs-tutorialsidebar-category-configuration-management-78c.json
@@ -6,7 +6,7 @@
   "navigation": {
     "previous": {
       "title": "Configuration of Grafana Dashboards",
-      "permalink": "/docs/4/Configuration of Grafana Dashboards"
+      "permalink": "/docs/Azure DevOps/Configuration of Grafana Dashboards"
     },
     "next": {
       "title": "Configuration Management",
