updating docker files and adding a new pipeline

--- a/documentation/.docusaurus/docusaurus-plugin-content-docs/default/category-docs-tutorialsidebar-category-configuration-management-78c.json
+++ b/documentation/.docusaurus/docusaurus-plugin-content-docs/default/category-docs-tutorialsidebar-category-configuration-management-78c.json
@@ -9,8 +9,8 @@
       "permalink": "/docs/Azure DevOps/Configuration of Grafana Dashboards"
     },
     "next": {
-      "title": "Configuration Management",
-      "permalink": "/docs/5/Introduction"
+      "title": "# ArgoCD role",
+      "permalink": "/docs/Deploy ArgoCD with Helm/Introduction"
     }
   }
 }
