--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16 AS builder
+FROM node:16-alpine AS builder
 
 # Set working directory
 WORKDIR /app
@@ -13,4 +13,4 @@ EXPOSE 3700
 # Copy the rest of the application files
 COPY . .
 
-CMD [ "npm" ,"run" ,"dev"]
+CMD [ "npm" ,"run" ,"start:dev"]
