--- a/kubernetes_manfiest/backend.yaml
+++ b/kubernetes_manfiest/backend.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: <your-backend-image>
+          image: chamseddinedocker/crudappbackend:latest
           ports:
             - containerPort: 3700
           env:
@@ -22,3 +22,17 @@ spec:
               value: mongodb://mongodb:27017/crud-users-db
             - name: PORT
               value: "3700"
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend
+spec:
+  selector:
+    app: backend
+  ports:
+    - protocol: TCP
+      port: 3700
+      targetPort: 3700
