--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16 AS builder
+FROM node:16-alpine AS builder
 
 # Set working directory
 WORKDIR /app
@@ -8,29 +8,20 @@ COPY package.json ./
 
 # Install dependencies
 RUN npm install
-
-EXPOSE 3000
-# Copy the rest of the application files
 COPY . .
+# build the app for production
+RUN npm run build
 
-CMD [ "npm" ,"run" ,"start"]
-# Build the app
-# RUN npm run build
+FROM nginx:1.25.1 as deploy
+WORKDIR /usr/share/nginx/html
+COPY --from=builder /app/build .
 
-# # Stage 2 - Production image
-# FROM nginx-alpine:16-alpine
 
-# # Set working directory
-# WORKDIR /app
-
-# # Install serve globally
-# RUN npm install -g serve
-
-# # Copy the build output from the builder stage
-# COPY --from=builder /app/build .
-
-# # Expose port (change it if needed)
-# EXPOSE 80
+# Copy built files from the production stage
+COPY --from=builder /app/build .
+EXPOSE 80
 
 # # Run the app
 # CMD ["serve", "-s", ".", "-p", "80"]    
+
+
