--- a/kubernetes_manfiest/backend.yaml
+++ b/kubernetes_manfiest/backend.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
         - name: backend
-          image: chamseddinedocker/crudappbackend:latest
+          # image: chamseddinedocker/crudappbackend:latest
+          image: crudappcontainerregistry.azurecr.io/backend:v2
           ports:
             - containerPort: 3700
           env:
