--- a/kubernetes_manfiest/frontend.yaml
+++ b/kubernetes_manfiest/frontend.yaml
@@ -8,8 +8,8 @@ spec:
   type: LoadBalancer
   ports:
     - protocol: TCP
-      port: 3000
-      targetPort: 3000
+      port: 80
+      targetPort: 80
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -27,9 +27,10 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: chamseddinedocker/crudappfrontend:latest
+          # image: chamseddinedocker/crudappfrontend:latest
+          image: crudappcontainerregistry.azurecr.io/frontend:v2
           ports:
-            - containerPort: 3000
+            - containerPort: 80
           env:
             - name: BACKEND_URL
-              value: http://backend:3700
+              value: backend:3700
