--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,9 +15,10 @@ services:
 
   frontend:
     container_name: frontend
-    build:
-      context: ./src/frontend
-      dockerfile: Dockerfile
+    image: frontend:prod
+    # build:
+    #   context: ./src/frontend
+    #   dockerfile: Dockerfile
     ports:
       - 3000:3000
     depends_on:
@@ -28,9 +29,10 @@ services:
 
   backend:
     container_name: backend
-    build:
-      context: ./src/backend
-      dockerfile: Dockerfile
+    image: backend:prod
+    # build:
+    #   context: ./src/backend
+    #   dockerfile: Dockerfile
     ports:
       - 3700:3700
     depends_on:
