--- a/minikube/frontend.yaml
+++ b/minikube/frontend.yaml
@@ -9,7 +9,7 @@ spec:
   ports:
     - protocol: TCP
       port: 3000
-      targetPort: 80
+      targetPort: 3000
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -27,10 +27,11 @@ spec:
     spec:
       containers:
         - name: frontend
-          # image: chamseddinedocker/crudappfrontend:latest
-          image: crudappcontainerregistry.azurecr.io/frontend:v3
+          image: chamseddinedocker/crudappfrontend:prod
+          # image: frontend:prod
           ports:
-            - containerPort: 80
+            - containerPort: 3000
           env:
             - name: BACKEND_URL
               value: http://backend:3700
+          # imagePullPolicy: Never
