--- a/kubernetes_manfiest/frontend.yaml
+++ b/kubernetes_manfiest/frontend.yaml
@@ -28,9 +28,10 @@ spec:
       containers:
         - name: frontend
           # image: chamseddinedocker/crudappfrontend:latest
-          image: crudappcontainerregistry.azurecr.io/frontend:v1
+          image: crudappcontainerregistry.azurecr.io/frontend:v2
           ports:
             - containerPort: 3000
           env:
             - name: BACKEND_URL
               value: http://backend:3700
+          imagePullPolicy: Always
