--- a/kubernetes_manfiest/frontend.yaml
+++ b/kubernetes_manfiest/frontend.yaml
@@ -20,6 +20,11 @@ spec:
     matchLabels:
       app: frontend
   replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 50%
+      maxSurge: 50%
   template:
     metadata:
       labels:
@@ -28,7 +33,7 @@ spec:
       containers:
         - name: frontend
           # image: chamseddinedocker/crudappfrontend:latest
-          image: crudappcontainerregistry.azurecr.io/frontend:v2
+          image: crudappcontainerregistry.azurecr.io/frontend:v1
           ports:
             - containerPort: 3000
           env:
