--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16-alpine AS builder
+FROM node:18-alpine AS builder
 
 # Set working directory
 WORKDIR /app
@@ -9,16 +9,23 @@ COPY package.json ./
 # Install dependencies
 RUN npm install
 COPY . .
-EXPOSE 3000
-CMD [ "npm" ,"run" ,"start"]
-# build the app for production
-# RUN npm run build
+RUN npm run build
 
-# FROM nginx:stable-alpine3.17-slim AS deploy
-# WORKDIR /usr/share/nginx/html
+# FROM node:18-alpine AS production
 # COPY --from=builder /app/build .
-# RUN rm -rf /etc/nginx/conf.d
-# COPY conf.d /etc/nginx/conf.d/default.conf
+# COPY --from=builder /app/package.json .
+# COPY --from=builder /app/node_modules ./node_modules
+# RUN ls -la
 # EXPOSE 3000
-# CMD ["nginx", "-g", "daemon off;"]
-# # # Run the app
+# CMD [ "react-scripts", "start" ]
+# CMD [ "npm" ,"run" ,"start"]
+
+FROM nginx:stable-alpine3.17-slim AS deploy
+WORKDIR /usr/share/nginx/html
+COPY --from=builder /app/build .
+RUN rm -rf /etc/nginx/conf.d
+COPY conf.d /etc/nginx/conf.d/default.conf
+EXPOSE 3000
+CMD ["nginx", "-g", "daemon off;"]
+
+
