--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,7 +59,7 @@ stages:
         command: 'buildAndPush'
         Dockerfile: '$(Build.SourcesDirectory)/src/frontend/Dockerfile'
         buildContext: '$(Build.SourcesDirectory)/src/frontend'
-        tags: 'production'
+        tags: 'v4'
 
   - job: BuildAndPushBackend
     displayName: 'Build and Push Backend Docker Image'
@@ -72,7 +72,7 @@ stages:
         command: 'buildAndPush'
         Dockerfile: '$(Build.SourcesDirectory)/src/backend/Dockerfile'
         buildContext: '$(Build.SourcesDirectory)/src/backend'
-        tags: 'production'
+        tags: 'v4'
 
 
   
