modify the k8s manifest files

--- a/.minikube/backend.yaml
+++ b/.minikube/backend.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: chamseddinedocker/crudappbackend:prod
+          image: backend:prod
           # image: backend:prod
           ports:
             - containerPort: 3700
