--- a/src/backend/.env
+++ b/src/backend/.env
@@ -1,2 +1,3 @@
-MONGO_URI="mongodb://mongodb:27017/crud-users-db"
+# MONGO_URI="mongodb://mongodb:27017/crud-users-db"
 PORT=3700
+MONGO_URI="mongodb://localhost:27017/crud-users-db"
