--- a/src/backend/.env
+++ b/src/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI="mongodb://localhost:27017/crud-users"
+MONGO_URI="mongodb://mongodb:27017/crud-users"
 PORT=3700
 # MONGO_URI="mongodb://localhost:3030/crud-users-db"
