--- a/kubernetes_manfiest/frontend.yaml
+++ b/kubernetes_manfiest/frontend.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
+  name: frontends
 spec:
   selector:
-    app: frontend
+    app: frontends
   type: LoadBalancer
   ports:
     - protocol: TCP
@@ -14,11 +14,11 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend
+  name: frontends
 spec:
   selector:
     matchLabels:
-      app: frontend
+      app: frontends
   replicas: 1
   # strategy:
   #   type: RollingUpdate
@@ -28,11 +28,11 @@ spec:
   template:
     metadata:
       labels:
-        app: frontend
+        app: frontends
     spec:
       containers:
         - name: frontend
-          image: chamseddinedocker/crudappfrontend:latest
+          image: 19880402/frontend:imed
           # image: crudappcontainerregistry.azurecr.io/frontend:production
           ports:
             - containerPort: 3000
