--- a/kubernetes_manfiest/frontend.yaml
+++ b/kubernetes_manfiest/frontend.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontends
+  name: frontend
 spec:
   selector:
-    app: frontends
+    app: frontend
   type: LoadBalancer
   ports:
     - protocol: TCP
@@ -14,7 +14,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontends
+  name: frontend
 spec:
   selector:
     matchLabels:
@@ -28,7 +28,7 @@ spec:
   template:
     metadata:
       labels:
-        app: frontends
+        app: frontend
     spec:
       containers:
         - name: frontend
