--- a/kubernetes_manfiest/backend.yaml
+++ b/kubernetes_manfiest/backend.yaml
@@ -1,11 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backends
+  name: backend
 spec:
   selector:
     matchLabels:
-      app: backends
+      app: backend
   replicas: 1
   # strategy:
   #   type: RollingUpdate
@@ -33,7 +33,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: backends
+  name: backend
 spec:
   selector:
     app: backends
